--- a/beamer/presentation.tex
+++ b/beamer/presentation.tex
@@ -205,7 +205,7 @@ rectangle, rounded corners, inner sep=10pt, inner ysep=20pt]
 \newdimen\bry
 
 %% To FILL to customize presentation with the TPT style
-\newcommand{\theTitle}{Déformation de cage par coordonnées de Green}
+\newcommand{\theTitle}{Edition de maillage par déformation de cage et coordonnées de Green}
 \newcommand{\theAuthors}{Arthur Mensch, Paul Vallet, Michaël Weiss}
 \newcommand{\theConferenceAndPlace}{INFSI350}
 \newcommand{\theDate}{\today}
