--- a/report/report.tex
+++ b/report/report.tex
@@ -17,7 +17,7 @@
 
 
 \author{Arthur Mensch, Paul Vallet, Michaël Weiss}
-\title{Déformation de cage par coordonnées de Green}
+\title{Edition de maillage par déformation de cage et coordonnées de Green}
 \begin{document}
 \maketitle
 \begin{abstract}
